k8s/home-apps/cerebro-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: cerebro
  name: cerebro
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cerebro
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: cerebro
    spec:
      containers:
        - env:
            - name: CEREBRO_HOST
              value: http://0.0.0.0:9000
          image: lmenezes/cerebro:latest
          name: cerebro
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 9000
              protocol: TCP
      restartPolicy: Always
