k8s/home-apps/debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
  - name: debug
    image: busybox
    command: ["sleep", "3600"]
