k8s/home-apps/jackett-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: jackett
  name: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: jackett
    spec:
      containers:
        - env:
            - name: AUTO_UPDATE
              value: "true"
            - name: PGID
              value: "988"
            - name: PUID
              value: "999"
            - name: RUN_OPTS
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/jackett:latest
          name: jackett
          ports:
            - containerPort: 9117
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: jackett-claim0
            - mountPath: /downloads
              name: jackett-claim1
      restartPolicy: Always
      volumes:
        - name: jackett-claim0
          persistentVolumeClaim:
            claimName: jackett-claim0
        - name: jackett-claim1
          persistentVolumeClaim:
            claimName: jackett-claim1
