k8s/home-apps/qbittorrent-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: qbittorrent
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: qbittorrent
    spec:
      containers:
        - env:
            - name: PGID
              value: "988"
            - name: PUID
              value: "999"
            - name: TORRENTING_PORT
              value: "42413"
            - name: TZ
              value: Etc/UTC
            - name: WEBUI_PORT
              value: "8080"
          image: lscr.io/linuxserver/qbittorrent:latest
          name: qbittorrent
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 42413
              protocol: TCP
            - containerPort: 42413
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: qbittorrent-claim0
            - mountPath: /video
              name: qbittorrent-claim1
      restartPolicy: Always
      volumes:
        - name: qbittorrent-claim0
          persistentVolumeClaim:
            claimName: qbittorrent-claim0
        - name: qbittorrent-claim1
          persistentVolumeClaim:
            claimName: qbittorrent-claim1
