k8s/home-apps/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: radarr
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: radarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "988"
            - name: PUID
              value: "999"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/radarr:latest
          name: radarr
          ports:
            - containerPort: 7878
              protocol: TCP
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /config
              name: radarr-claim0
            - mountPath: /movies
              name: radarr-claim1
            - mountPath: /downloads
              name: radarr-claim2
            - mountPath: /video
              name: radarr-claim3
      restartPolicy: Always
      volumes:
        - name: radarr-claim0
          persistentVolumeClaim:
            claimName: radarr-claim0
        - name: radarr-claim1
          persistentVolumeClaim:
            claimName: radarr-claim1
        - name: radarr-claim2
          persistentVolumeClaim:
            claimName: radarr-claim2
        - name: radarr-claim3
          persistentVolumeClaim:
            claimName: radarr-claim3
