k8s/home-apps/sonarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: sonarr
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: sonarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "988"
            - name: PUID
              value: "999"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/sonarr:latest
          name: sonarr
          ports:
            - containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sonarr-claim0
            - mountPath: /tv
              name: sonarr-claim1
            - mountPath: /downloads
              name: sonarr-claim2
            - mountPath: /video
              name: sonarr-claim3
      restartPolicy: Always
      volumes:
        - name: sonarr-claim0
          persistentVolumeClaim:
            claimName: sonarr-claim0
        - name: sonarr-claim1
          persistentVolumeClaim:
            claimName: sonarr-claim1
        - name: sonarr-claim2
          persistentVolumeClaim:
            claimName: sonarr-claim2
        - name: sonarr-claim3
          persistentVolumeClaim:
            claimName: sonarr-claim3
