k8s/home-apps/unpackerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: unpackerr
  name: unpackerr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: unpackerr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: unpackerr
    spec:
      containers:
        - env:
            - name: TZ
              value: America/New_York
            - name: UN_LOG_FILE
              value: /downloads/unpackerr.log
            - name: UN_RADARR_0_API_KEY
              value: ae98c5ec6ee94ef8811173ac6ef02f17
            - name: UN_RADARR_0_URL
              value: https://radarr.bwortman.us
            - name: UN_SONARR_0_API_KEY
              value: 22d6c3ec5c9d45a2baba1cf9f4d92ebb
            - name: UN_SONARR_0_URL
              value: https://sonarr.bwortman.us
          image: golift/unpackerr
          name: unpackerr
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /downloads
              name: unpackerr-claim0
      restartPolicy: Always
      volumes:
        - name: unpackerr-claim0
          persistentVolumeClaim:
            claimName: unpackerr-claim0
