k8s/home-apps/jackett-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: jackett
  name: jackett
spec:
  ports:
    - name: "9117"
      port: 9117
      targetPort: 9117
  selector:
    io.kompose.service: jackett
