k8s/home-apps/qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: qbittorrent
  name: qbittorrent
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "42413"
      port: 42413
      targetPort: 42413
    - name: 42413-udp
      port: 42413
      protocol: UDP
      targetPort: 42413
  selector:
    io.kompose.service: qbittorrent
