k8s/home-apps/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: radarr
  name: radarr
spec:
  ports:
    - name: "7878"
      port: 7878
      targetPort: 7878
  selector:
    io.kompose.service: radarr
